# Pi-tools

./: .gitignore  README.md
3615-disco/: 3615-disco  3615-disco.service  README.md  autoreload  disco.js  eventemitter.py  flaskserver.py  install.sh  main.py  package-lock.json  package.json  requirements.txt  zerodisco.py
audioselect/: 70-audioselect.rules  README.md  asound.conf  asound.conf-16chan  asound.conf-pi2  asound.conf-pi2-buster  asound.conf-pi4  audioselect  audioselect.service  audioselect@.service  install.sh
bluetooth-pi/: README.md  bluetooth-pi.service  install.sh
bootstrap/: README.md  bootstrap-arch-rpi.sh  bootstrap-manjaro-pi4.sh  bootstrap-raspbian-32bits.sh  bootstrap-raspbian-pi4.sh  bootstrap-ubuntu-server-x86.sh  bootstrap-xbian-rp64.sh  install_tools.sh
camera-server/: README.md  camera-server.service  install.sh
extendfs/: README.md  extendfs  extendfs.service  install.sh
filebrother/: filebrother  filebrother.js  filebrother.service  install.sh  package-lock.json  package.json
hostrename/: README.md  hostrename  hostrename@.service  install.sh
kiosk/: cog-launcher  install.sh  kiosk  kiosk.service  loader.html
kiosk-chromium/: install.sh  kiosk  kiosk.service  loader.html  openbox-chromium
kiosk-wpe/: install.sh  kiosk  kiosk.service
network-tools/: README.md  enforce-ipv4  iface-off@.service  install.sh  setnet  setnet.service  uplink-fwd  uplink-fwd@.service  wint-off@.service  wlan0-off@.service
rorw/: README.md  fake-clock  fake-clock-autosave.timer  (+6 more)
webconf/legacy/: flaskserver.py  pyproject.toml  requirements.txt
(+125 files in other folders)
